--- a/LibraryManagment/LibraryManagment.csproj
+++ b/LibraryManagment/LibraryManagment.csproj
@@ -27,6 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.19" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="images\icon\book1.png" />
     <Resource Include="images\icon\bookList.png" />
     <Resource Include="images\icon\books.png" />
